--- a/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
+++ b/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: "eicons";
-	src: url("https://https://jaelani15.github.io/Dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_20_0");
-	src: url("https://https://jaelani15.github.io/Dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_20_0#iefix") format("embedded-opentype"), url("https://https://jaelani15.github.io/Dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff2?5_20_0") format("woff2"), url("https://https://jaelani15.github.io/Dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff?5_20_0") format("woff"), url("https://https://jaelani15.github.io/Dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.ttf?5_20_0") format("truetype"), url("https://https://jaelani15.github.io/Dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.svg?5_20_0#eicon") format("svg");
+	src: url("https://jaelani15.github.io/dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_20_0");
+	src: url("https://jaelani15.github.io/dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_20_0#iefix") format("embedded-opentype"), url("https://jaelani15.github.io/dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff2?5_20_0") format("woff2"), url("https://jaelani15.github.io/dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff?5_20_0") format("woff"), url("https://jaelani15.github.io/dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.ttf?5_20_0") format("truetype"), url("https://jaelani15.github.io/dialog/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.svg?5_20_0#eicon") format("svg");
 	font-weight: normal;
 	font-style: normal;
 }
